# autocoin

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  capture_screenshots.py  docker-compose.yml  main.py  migrate_add_user.py  pyproject.toml
autocoin/: app.py  auth.py  config.py  database.py
autocoin/models/: classification_rule.py  import_batch.py  transaction.py  user.py
autocoin/parsers/: alipay.py  base.py  wechat.py
autocoin/repository/: base.py  sqlite.py
autocoin/routers/: auth.py  imports.py  rules.py  statistics.py  transactions.py
autocoin/schemas/: auth.py  classification_rule.py  import_schema.py  statistics.py  transaction.py
autocoin/services/: image_recognizer.py  import_service.py  stats_service.py
docs/: github-description.md  wechat-moments.md  xiaohongshu-post.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  auth.js  charts.js  dashboard.js  import.js  rules.js  stats.js  transactions.js
tests/: conftest.py  test_api.py  test_image_recognizer.py  test_parsers.py
