[project]
name = "autocoin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "sqlalchemy>=2.0",
  "openpyxl>=3.1",
  "python-multipart>=0.0.9",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
]
